[gd_scene load_steps=7 format=3 uid="uid://bhdcqa1rkul33"]

[ext_resource type="Script" path="res://scenes/the_portal.gd" id="1_a444q"]
[ext_resource type="Gradient" uid="uid://dgn4q6wqo5ctv" path="res://resources/shadow_gradient.Gradient.tres" id="1_obyk1"]
[ext_resource type="Texture2D" uid="uid://b5oivl2h27cbw" path="res://assets/icon.svg" id="1_uvd8s"]
[ext_resource type="PackedScene" uid="uid://bpdpfxoa47l3c" path="res://scenes/interaction_area.tscn" id="4_61xxw"]
[ext_resource type="Script" path="res://scenes/the_portal_interaction.gd" id="5_8v4pk"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yjomj"]
gradient = ExtResource("1_obyk1")
width = 24
height = 8
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[node name="ThePortal" type="StaticBody2D"]
collision_layer = 8
collision_mask = 7
script = ExtResource("1_a444q")

[node name="Shadow" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_yjomj")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_uvd8s")
offset = Vector2(0, -64)
region_rect = Rect2(0, 0, 32, 32)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, -3, 7, 0, 0, 3, -7, 0)

[node name="IronDisplay" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -47.0
offset_right = 20.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
text = "0 / 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonPrompt" type="Panel" parent="."]
visible = false
z_index = 10
z_as_relative = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -21.5
offset_top = -19.0
offset_right = 21.5
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8

[node name="Text" type="Label" parent="ButtonPrompt"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
text = "Press E"
horizontal_alignment = 1

[node name="InteractionArea" parent="." node_paths=PackedStringArray("interaction") instance=ExtResource("4_61xxw")]
interaction = NodePath("../ThePortalInteraction")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="InteractionArea"]
polygon = PackedVector2Array(16, -8, 16, 8, -16, 8, -16, -8)

[node name="ThePortalInteraction" type="Node" parent="."]
script = ExtResource("5_8v4pk")

[node name="ContinuousInteractionTimer" type="Timer" parent="ThePortalInteraction" groups=["the_portal"]]
wait_time = 0.3
one_shot = true

[connection signal="iron_changed" from="." to="." method="on_energy_changed" unbinds=1]
[connection signal="player_entered" from="InteractionArea" to="." method="on_player_interaction_area" binds= [true]]
[connection signal="player_exited" from="InteractionArea" to="." method="on_player_interaction_area" binds= [false]]
[connection signal="timeout" from="ThePortalInteraction/ContinuousInteractionTimer" to="ThePortalInteraction" method="on_continuous_interaction_timer_timeout"]
